fixed missing border

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -20,6 +20,7 @@ body {
             content: "";
             position: absolute;
             inset: 0;
+            top: 5px;
             z-index: -1;
             opacity: 0.7;
 
